# sphinxcontrib-jsontable

./: .env.example  .gitignore  .license-check.yml  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  FILE_NAMING_ULTRATHINK_ANALYSIS.md  KNOWLEDGE_EXTRACTION_RULES.md  LICENSE  LICENSES.md  MANIFEST.in  MIGRATION.md  PERFORMANCE_OPTIMIZATION_MASTER_PLAN_FINAL_REPORT.md  PRODUCT_CODE_QUALITY_ULTRATHINK_ANALYSIS.md  README.md  README_ja.md  SECURITY.md  SECURITY_RULES.md  UV_ENVIRONMENT_RULES.md  codecov.yml  debug_dataframe_size.py  debug_header_row.py  executive_report_demo-enterprise_20250610_173324.json  index.rst  inventory-management_metadata.json  main.rst  memo.md  output.txt  plan.md  production-management_data.json  pyproject.toml  release_notes_v0.3.0.md  requirements-test.txt  ruff-mypy-coverage.toml  ruff.toml  sales-analysis_metadata.json  sales-monitoring_data.json  setup.py  test_column_customization_manual.py  test_enhanced_directive.py  (+1 more)
.github/: dependabot.yml  pull_request_template.md
.github/workflows/: ci.yml  release.yml  security.yml
analysis/v0.3.0_workflow_analysis/: 01_executive_summary.md  02_technical_architecture_changes.md  03_workflow_comparison.md  04_usage_transformation.md  05_performance_impact.md  06_business_value_assessment.md  07_migration_strategy.md  README.md
data/: main.rst
data/test/: finance-monitoring_data.json  finance-monitoring_metadata.json  financial-analysis_metadata.json  inventory-management_data.json  production-management_metadata.json  production-monitoring_metadata.json  sales-analysis_metadata.json  sales-monitoring_metadata.json  test-analysis_data.json  test-analysis_metadata.json
docs/: DEVELOPMENT.md  KNOWLEDGE_MANAGEMENT.md  README.md  entity_recognition_flow.mermaid  excel_advanced_features.md  export_format_flow.mermaid  getting_started.md  migration_flow.mermaid  performance_optimization.md  quick_examples.py  rag_workflow_diagram.mermaid  technical_usage_flow.mermaid  troubleshooting_guide.md  v0.3.0_feature_tutorial.md  v0.3.0_quick_start.md
docs/examples/: user_friendly_error_examples.md
docs/project_management/: PROGRESS_CHECK_MANDATORY.md
examples/: column_customization_examples.rst  conf.py  enterprise_federation_demo.py  excel_quickstart_demo.py  index.rst  rag_example.rst  rag_test.json
examples/data/: inventory_data.xlsx  sales_report.xlsx  sample_products.json  sample_users.json
issues_to_create/: github_issues_creation_commands.md  issue_documentation_user_experience.md  issue_merged_cells_detection.md  issue_range_detection_algorithms.md
plan/: Performance_Optimization_Master_Plan.md  ai_api_dependency_analysis.md  current_status.md  current_task_summary.md  detailed_feature_explanation.md  excel_rag_implementation_roadmap.md  final_project_status_summary.md  issue45_completion_report.md  kpt_analysis_rules.md  phase3_plamo_integration_detailed_plan.md  progress_management_rules.md  quality_optimization_status.md  rag_implementation_plan.md  rag_integration_usability_improvement_plan.md  unit_test_fix_plan.md
plan/analysis/: kpt_analysis_2025-06-07_phase2_completion.md
plan/decisions/: enhanced_directive_architecture.md  phase2_advanced_metadata_architecture.md  security_policy.md
plan/progress/: ImplementationPlan.md  Performance_Optimization_Progress_Template.md  excel_function_guarantee_repair_plan.md  week1_progress.md
plan/todo/: ImplementationPlan.md  master_project_management.md  phase1_semantic_data_output.md  phase2_metadata_generation.md  phase3_vector_processing.md  plamo_integration_benefits.md
record/history/: ArchitectureDesign.md  DetailedTasks.md  ImplementationPlan copy.md  ImplementationPlan#2.md  ImplementationPlan#3.md  ImplementationPlan.md  directives_structure_design.md  issue_folder_structure_optimization.md  plan_Issue #51.md
scripts/: competitive_analysis.py  functionality_test.py  knowledge_extraction.py  local-ci-check.sh  memory_analysis.py  performance_benchmark.py  test_integration.py  validate_ci_tests.py
sphinxcontrib/: __init__.py
sphinxcontrib/jsontable/: __init__.py  data_loaders.py  directives.py  directives_backup.py  enhanced_directive.py  excel_data_loader.py  json_table_directive.py  table_builders.py  table_converters.py
temp_test/: header_test.xlsx  range_test.xlsx  skip_rows_test.xlsx
tests/: conftest.py  test_basic_coverage_improvement.py  test_basic_table_builder.py  test_column_customization.py  test_core_coverage.py  test_directives_base_directive.py  test_directives_excel_processor.py  test_directives_json_processor.py  test_directives_table_builder.py  test_directives_validators.py  test_docutils_investigation.py  test_end_to_end_integration.py  test_enhanced_directive.py  test_enhanced_directive_basic.py  test_enhanced_directive_coverage.py  test_enhanced_directive_integration.py  test_enhanced_directive_mocks.py  test_excel_integration.py  test_import.py  test_integration.py  test_json_data_loader.py  test_json_table_directive.py  test_json_table_directive_advanced.py  test_json_table_directive_coverage.py  test_massive_coverage_boost.py  test_performance_limits.py  test_performance_limits_integration.py  test_phase1_2_integration.py  test_phase2_integration.py  test_phase3_plamo_integration.py  test_query_processor_coverage.py  test_query_processor_sync_coverage.py  test_rag_basic_coverage.py  test_search_index_coverage.py  test_strategic_80_coverage.py  test_table_builder.py  test_table_converter.py  test_ultra_coverage_100.py  test_ultra_coverage_80.py  test_utils.py  (+1 more)
tests/benchmark/: test_benchmark_core.py  test_phase4_performance_benchmark.py
tests/coverage/: test_basic_coverage_improvement.py  test_core_coverage.py  test_coverage_advanced.py  test_coverage_core.py  test_coverage_rag.py  test_data_loaders_comprehensive.py  test_json_table_directive_comprehensive.py  test_json_table_directive_coverage.py  test_rag_basic_coverage.py  test_semantic_chunker_comprehensive.py  test_table_builders_comprehensive.py
tutorials/: README.md  interactive_tutorial.ipynb  performance_comparison_demo.py
(+385 files in other folders)
